add note about searching for files

--- a/templates/hw/task1.html
+++ b/templates/hw/task1.html
@@ -30,12 +30,14 @@
             <li>Clone the starter code from the repository into a new IntelliJ project</li>
         </ul>
         <p>
-            Once you have the project opened in IntelliJ, you'll see a src folder which contains a folder another
-            folder called main, which contains another folder called java.
-            Inside this folder is the Java package app which contains all the code for the project. The starter code
+            Once you have the project opened in IntelliJ, you'll see a src folder which contains another
+            folder called main, which contains another folder called java. Inside this folder is the Java package app which contains all the code for the project. The starter code
             contains
-            many Java classes needed for the engine to run. Don't panic about the number of files. For now, you can
-            safely ignore most of them.
+            many Java classes needed for the engine to run.
+        </p>
+        <p> Don't panic about the number of files. For now, you can
+            safely ignore most of them. If you ever have trouble finding a specific file, you can
+            press shift twice to open a convenient search window that'll direct you to the desired class.
         </p>
         <p>
             For this task, you will be writing code in the following classes:
