--- a/templates/hw/task1.html
+++ b/templates/hw/task1.html
@@ -202,7 +202,7 @@
                             <li><code>getMaxHP</code></li>
                             <li><code>getOrientation</code></li>
                             <li>Note: These methods exist in the handout code, but do not do what they are supposed to
-                                do. You're task is update their code to use your instance variables</li>
+                                do. Your task is update their code to use your instance variables</li>
                         </ul>
                     </li>
                     <li>Implement a method named <code>takeDamage</code> that takes in an int and returns void. This
