--- a/templates/hw/task1.html
+++ b/templates/hw/task1.html
@@ -274,6 +274,12 @@
                                 left, it would need to be moved to (0,0), a distance of 0.5. Thus, it should be moved left, to the location (0,0)
                             </li>
                             <li>
+                                You can access the wall's location and dimensions using <code>this.getLocation()</code>
+                                and <code>this.getDimensions()</code>. These methods are inherited from the
+                                <code>GameObject</code> class. We'll learn the details about this during inheritance
+                                week
+                            </li>
+                            <li>
                                 Simplifying Assumptions: When writing this method, you can assume two objects are currently
                                 colliding, that they have the same dimensions, that their hitboxes exactly match
                                 their location and dimensions, and all dimensions are (1.0, 1.0). All these assumptions
