Linked Task 1 overview video

--- a/templates/hw/task1.html
+++ b/templates/hw/task1.html
@@ -66,6 +66,31 @@
 
         <hr/>
         <h3>
+            Overview Video
+        </h3>
+        <hr/>
+
+        <p>
+            Video link: <a href="https://youtu.be/aX6eNfhxIwo">https://youtu.be/aX6eNfhxIwo</a>
+        </p>
+        <p>
+            To help you get started and better understand Task 1, our amazing TA Josh has made a video covering some of
+            the basics.
+        </p>
+        <p>
+            It covers the project structure, goes over the requirements for the task, and helps to answer the common
+            questions you might have. It is available on the cse116 Youtube channel, and is linked above
+        </p>
+        <p> 
+            Watching this video is optional, and all of the information you need for this task is contained within this
+            page. However, you may find it helpful for getting a better understanding of the task, and what is expected
+            of you
+        </p>
+
+        <br/>
+
+        <hr/>
+        <h3>
             The Game Engine
         </h3>
         <hr/>
