Task 2 overview video

--- a/templates/hw/task2.html
+++ b/templates/hw/task2.html
@@ -58,6 +58,29 @@
         </p>
         <br/>
         <hr/>
+        <h3>
+            Overview Video
+        </h3>
+        <hr/>
+
+        <p>
+            Video link: <a href="https://youtu.be/kNhIJL5VPkk?si=i3aTK3mdM4OSiZfA">https://youtu.be/kNhIJL5VPkk?si=i3aTK3mdM4OSiZfA</a>
+        </p>
+        <p>
+            Our amazing TA Josh has made another overview video for Task. This video goes over the specifications for 
+            the task, the LinkedListNode class you will be using, and a conceptual overview of the goals for this task.
+            It also covers some practical examples of using recursion in this task, which is not required, but is highly
+            recommended. It is available on the cse116 Youtube channel, and is linked above
+        </p>
+        <p> 
+            As before, watching this video is optional, and all of the information you need for this task is contained
+            within this page. However, you may find it helpful for getting a better understanding of the task, and what
+            is expected of you
+        </p>
+
+        <br/>
+
+        <hr/>
         <h3>Specification</h3>
         <hr/>
 
