--- a/templates/hw/task2.html
+++ b/templates/hw/task2.html
@@ -3,9 +3,9 @@
 {% block title %}CSE116: Task 2{% endblock %}
 
 {% block header %}
-    <h1>Coding Task 2</h1>
+    <h1>Coding Task 2 - Linked Lists</h1>
     <hr/>
-    <h5>Time Estimate: </h5>
+    <h5>Time Estimate: 12 hours</h5>
     <hr/>
 {% endblock %}
 
